@@ -1,5 +1,5 @@
-package com.backendVn.SWP.controllers;
 
+package com.backendVn.SWP.controllers;
 
 import com.backendVn.SWP.services.PDFGeneratorService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,11 +14,10 @@ import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.IOException;
 import java.nio.file.Files;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 
 @RestController
 public class PDFExportController {
@@ -29,39 +28,35 @@ public class PDFExportController {
     private PDFGeneratorService pdfGeneratorService;
 
     @GetMapping("/generate-certificate/{requestId}")
-    public ResponseEntity<byte[]>generateCertificate(@PathVariable Integer requestId) {
-        String templatePath = "SWP/src/main/resources/media/PDFForm.pdf"; // Absolute path to the template
-        String outputPath = "GeneratedWarrantyCertificate.pdf";
+    public ResponseEntity<byte[]> generateCertificate(@PathVariable Integer requestId) {
+        String templatePath = "media/PDFForm.pdf"; // Absolute path to the template
 
         try {
-            // Prepare data for placeholders
-            List<String> data = new ArrayList<>();
-            data.add("Customer Name ________________");
-            data.add("Product Name __________________");
-            data.add("Product Type____________");
-            data.add("Material _____________");
-            data.add("Main Stone ________________");
-            data.add("Sub Stone _________________");
-            data.add("Warranty Start Date ______");
-            data.add("Warranty End Date ______");
+            // Use a temporary file for the output
+            Path tempFile = Files.createTempFile("GeneratedWarrantyCertificate", ".pdf");
 
             // Generate the PDF
-            pdfGeneratorService.generateWarrantyCertificate(data, templatePath, outputPath, requestId);
+            pdfGeneratorService.generateWarrantyCertificate(templatePath, tempFile.toString(), requestId);
 
             // Read the generated PDF file
-            File file = new File(outputPath);
-            byte[] contents = Files.readAllBytes(file.toPath());
+            byte[] contents;
+            try (var inputStream = Files.newInputStream(tempFile)) {
+                contents = inputStream.readAllBytes();
+            }
+
+            // Clean up the temporary file
+            Files.deleteIfExists(tempFile);
 
             // Return the PDF as a downloadable file
             return ResponseEntity.ok()
-                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + file.getName())
+                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=GeneratedWarrantyCertificate.pdf")
                     .contentType(MediaType.APPLICATION_PDF)
                     .body(contents);
         } catch (FileNotFoundException e) {
-            logger.error("Template file not found: " + templatePath, e);
+            logger.error("Template file not found: {}", templatePath, e);
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Template file not found: " + templatePath, e);
         } catch (Exception e) {
-            logger.error("Error generating PDF", e);
+            logger.error("Error generating PDF for requestId: {}", requestId, e);
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error generating PDF", e);
         }
     }
@@ -71,3 +66,4 @@ public class PDFExportController {
         return ResponseEntity.status(e.getStatusCode()).body(e.getReason());
     }
 }
+
